# L2-C2-Solution

./: .gitignore  CHANGELOG.md  Figma agent thread.txt  GPU_BACKENDS.md  README.md  ROADMAP.md  TECHNICAL_ARCHITECTURE.md  TODO.md  _export_pptx_preview.py  _inspect_slide3_groups.py  _inspect_template.py  build_product_story.py  fill_product_story.py  generate_improvement_prd.py  generate_security_audit.py  make_pitch_docx.py
.github/workflows/: desktop.yml  release.yml  siteassure-ci.yml  siteassure-security.yml
_figma_scripts/: build_empty_hero.js  build_model_missing.js  build_with_transcript.js  run_use_figma.py
_partner-review/: PUSH.sh
_pptx-work/extracted/: [Content_Types].xml
_pptx-work/extracted/ppt/: presentation.xml
_pptx-work/extracted/ppt/_rels/: presentation.xml.rels
_pptx-work/extracted/ppt/fonts/: IBMPlexSansLight-regular.fntdata  IBMPlexSansMedium-italic.fntdata  IBMPlexSansSemiBold-bold.fntdata  IBMPlexSansSemiBold-boldItalic.fntdata  IBMPlexSansSemiBold-italic.fntdata
_pptx-work/extracted/ppt/notesSlides/: notesSlide1.xml  notesSlide2.xml  notesSlide3.xml
_pptx-work/extracted/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout12.xml  slideLayout13.xml  slideLayout14.xml  slideLayout15.xml  slideLayout16.xml  slideLayout17.xml  slideLayout18.xml  slideLayout19.xml  slideLayout2.xml  slideLayout20.xml  slideLayout21.xml  slideLayout22.xml  slideLayout23.xml  slideLayout24.xml  slideLayout25.xml  slideLayout26.xml  slideLayout27.xml  slideLayout28.xml  slideLayout29.xml  slideLayout3.xml  slideLayout30.xml  slideLayout31.xml  slideLayout32.xml  slideLayout33.xml  slideLayout34.xml  slideLayout35.xml  slideLayout36.xml  slideLayout37.xml  slideLayout38.xml  slideLayout39.xml  slideLayout4.xml  slideLayout40.xml  slideLayout41.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  (+1 more)
_pptx-work/extracted/ppt/slideMasters/: slideMaster1.xml
_pptx-work/extracted/ppt/slideMasters/_rels/: slideMaster1.xml.rels
_pptx-work/extracted/ppt/slides/: slide1.xml  slide2.xml  slide3.xml
_pptx-work/extracted/ppt/slides/_rels/: slide1.xml.rels  slide2.xml.rels  slide3.xml.rels
_pptx-work/extracted/ppt/theme/: theme2.xml
docs/: Aisling-corrections.md  FIGMA-HANDOFF.md  RESONA-VISUAL-REDESIGN.md  SLICE-E-F-SCOPE.md  SLICE-G-SCOPE.md  SLICE-I-SCOPE.md  SLICE-J-SCOPE.md  SLICE-K-SCOPE.md  Week2-PRD-STATUS.md  Wisper_Pitch_2-3min.md
siteassure/: .gitignore  Cargo.toml  README.md  ROADMAP.md  SESSION_SUMMARY.txt  build-gpu.ps1  chat_thread.txt  dev-macos.sh  dev.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
siteassure/.cargo/: config.toml
siteassure/data/: README.md  inspections_msa.csv  osha_pipeline.py  osha_trade_stats.json  violations_msa.csv
siteassure/db/: schema.sql
siteassure/docs/: siteassure_mockup.html
siteassure/src/: App.tsx  main.tsx  theme.ts
siteassure/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
siteassure/src-tauri/.impeccable/: hook.cache.json
siteassure/src-tauri/capabilities/: default.json
siteassure/src-tauri/src/: audit.rs  commands.rs  crypto.rs  db.rs  flags.rs  main.rs  mic.rs  retention.rs  setup.rs
siteassure/src/components/: ScreenShell.tsx
siteassure/src/lib/: api.ts  cleanup.test.ts  cleanup.ts  diff.ts  tradeStats.ts  transcriptParse.ts  types.ts
siteassure/src/screens/: AuditScreen.tsx  CaptureScreen.tsx  ConfirmScreen.tsx  DashboardScreen.tsx  FlagsScreen.tsx  HomeScreen.tsx  RecordScreen.tsx  RecordsScreen.tsx  SetupScreen.tsx
siteassure/wisper-core/: Cargo.toml
siteassure/wisper-core/src/: compute.rs  error.rs  ffmpeg_tools.rs  hardware.rs  lib.rs  managed_binary.rs  model.rs  tool_refresh.rs  update.rs
siteassure/wisper-core/src/audio/: mod.rs
siteassure/wisper-core/src/fetch/: mod.rs
siteassure/wisper-core/src/transcribe/: mod.rs
siteassure/wisper-core/src/video/: mod.rs
wisper/: .gitignore  Cargo.toml  README.md  build-gpu.ps1  build-linux.sh  dev-cuda.ps1  dev-linux.sh  dev-sycl.ps1  dev.ps1  index.html  package-lock.json  package.json
wisper/.cargo/: config.toml
wisper/design/brainstorm-import/: mockup-2-deepcurrent.html
wisper/design/brainstorm-import/resona-assets/resona/: .gitignore  .mailmap  README.md  index.html  package.json
wisper/design/brainstorm-import/resona-assets/resona/docs/: ROADMAP.md  TODO.md
wisper/design/brainstorm-import/resona-assets/resona/prototype-web/: index.html
wisper/design/brainstorm-import/resona-assets/resona/src/: App.tsx  styles.css
wisper/design/brainstorm-import/resona-assets/resona/src-tauri/: Cargo.toml  tauri.conf.json
wisper/design/brainstorm-import/resona-assets/resona/src-tauri/capabilities/: default.json
wisper/design/brainstorm-import/resona-assets/resona/src-tauri/src/: audio.rs  lib.rs  licensing.rs  main.rs  streaming.rs  vad.rs  whisper.rs
wisper/design/mockups/: direction-a-deep-current.html  direction-ab-hybrid.html  direction-b-living-surface.html  direction-c-daylight.html
wisper/scripts/: build-release.ps1  download-model.ps1  download-yt-dlp-bundle.ps1  download-yt-dlp-bundle.sh  install-cuda-windows-ci.ps1  patch-vulkan-cmake.ps1  phase1-exit-qa.ps1  seed-burn-in-recording.ps1  smoke-test.ps1  smoke-test.sh  ui-burn-in-test.mjs  ui-burn-in-test.ps1  verify-cuda.ps1
wisper/src/: App.css  App.tsx  AppHeader.tsx  EmptyStateHero.tsx  ExportMenu.tsx  ModelMissingPanel.tsx  ResonaAppmark.tsx  UrlImportRow.tsx  WelcomeGuide.tsx  resona.css  tokens.css
wisper/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
wisper/src-tauri/src/: lib.rs  mic.rs
wisper/test-artifacts/: subs.srt
wisper/wisper-core/: Cargo.toml
wisper/wisper-core/src/: compute.rs  engine.rs  error.rs  ffmpeg_tools.rs  lib.rs  model.rs
wisper/wisper-core/src/audio/: mod.rs
wisper/wisper-core/src/export/: bundle.rs  docx.rs  mod.rs  pdf.rs
wisper/wisper-core/src/fetch/: mod.rs
wisper/wisper-core/src/storage/: mod.rs
wisper/wisper-core/src/transcribe/: mod.rs
wisper/wisper-core/src/video/: mod.rs
(+5 files in other folders)
