[package]
name = "wisper"
version = "0.2.0-beta.24"
description = "Privacy-first local transcription — Wisper desktop app"
authors = ["Aisling Leiva", "Jimmy Ong"]
edition = "2021"

[lib]
name = "wisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
uuid = { version = "1", features = ["v4"] }
wisper-core = { path = "../wisper-core" }

[features]
default = []
gpu-vulkan = ["wisper-core/gpu-vulkan"]
gpu-cuda = ["wisper-core/gpu-cuda"]
gpu-sycl = ["wisper-core/gpu-sycl"]
