[package]
name = "wisper-core"
version = "0.1.0"
edition = "2021"
description = "Local-first audio pipeline and whisper.cpp transcription for Wisper"

[features]
default = []
# Exactly one non-macOS GPU feature may be enabled per build (see compute.rs compile_error!).
# macOS always uses Metal via the target-specific whisper-rs dependency below.
gpu-vulkan = ["whisper-rs/vulkan"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-sycl = ["whisper-rs/intel-sycl"]

[dependencies]
hound = "3.5"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav", "isomp4"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
whisper-rs = { version = "0.16", default-features = false }

# Metal on Apple Silicon and Intel Macs (whisper.cpp GGML_METAL).
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }
